--- a/Old/portfolioOLD.css
+++ b/Old/portfolioOLD.css
@@ -79,6 +79,7 @@ img {
 img:hover {
 	filter: grayscale(5%);  /* Brings back most of the image's color when hovered over */
     transition: transform 1s; /* Transition lasts 1 second */
+	transform: scale(1.1); /* Image is increased slightly when hovered over */
 }
 
 /* The @media rule is used in media queries to apply different styles for different media/types of devices */
@@ -264,195 +265,56 @@ footer {
 /***** END OF TABLE STYLING *****/
 
 /***** CONTACT FORM STYLING *****/
-.open-button {
-    background-color: #521a1a;
-    color: white;
-    padding: 16px 20px;
-    border: none;
-    cursor: pointer;
-    opacity: 0.8;
-    position: fixed;
-    bottom: 23px;
-    right: 28px;
-    width: 280px;
-  }
-  
-  /* The popup form - hidden by default */
-  .form-popup {
-    display: none;
-    position: fixed;
-    bottom: 0;
-    right: 15px;
-    border: 3px solid #f1f1f1;
-    z-index: 9;
-  }
-  
-  /* Add styles to the form container */
-  .form-container {
-    max-width: 300px;
-    padding: 10px;
-    background-color: white;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-  }
-  
-  /* Full-width input fields */
-  .form-container input[type=text], .form-container input[type=password] {
-    width: 100%;
-    padding: 15px;
-    margin: 5px 0 22px 0;
-    border: none;
-    background: #f1f1f1;
-  }
-  
-  /* When the inputs get focus, do something */
-  .form-container input[type=text]:focus, .form-container input[type=password]:focus {
-    background-color: #ddd;
-    outline: none;
-  }
-  
-  /* Set a style for the submit/login button */
-  .form-container .btn {
-    background-color: #04AA6D;
-    color: white;
-    padding: 16px 20px;
-    border: none;
-    cursor: pointer;
-    width: 100%;
-    margin-bottom:10px;
-    opacity: 0.8;
-  }
-  
-  /* Add a red background color to the cancel button */
-  .form-container .cancel {
-    background-color: red;
-  }
-  
-  /* Add some hover effects to buttons */
-  .form-container .btn:hover, .open-button:hover {
-    opacity: 1;
-  }
-/* END OF CONTACT FORM STYLING */
+/* input[type=text] targets all text input sections of the contact form */
+input[type=text] {
+    width: 100%; /* Each input box covers the full width of the container */
+    padding: 12px; /* Adds padding within the text box */
+    border: 1px solid #ccc; /* Setting a solid border and its color */
+    border-radius: 4px; /* Slightly rounds the corners of the text box border */
+    box-sizing: border-box; /* This creates a box with a border around the contact form input boxes */
+    margin-top: 6px; /* Adds a margin to the top of the text box */
+    margin-bottom: 16px; /* Adds a margin to the bottom of the text box */
+    resize: vertical; /* This allows the user to resize the text boxes vertically */
+    font-family: Perpetua, Rockwell Extra Bold;
+}
+
+/* Hover effects for input boxes */
+input[type=text]:hover {
+    box-shadow: 0 0 5px #00004d inset; /* This creates a blue shadow in the text box when hovered over by the user */
+}
+
+/* Submit button */
+input[type=submit] {
+    background-color: black; /* Sets the background color of the submit button to black */
+    color: white; /* Sets the font color of the Submit button to white */
+    font-weight: bold; /* Makes the font of the submit button bold */
+    padding: 12px 20px; /* Adds padding to the submit button */
+    border: none; /* Removes the border from the submit button */
+    border-radius: 4px; /* Gives the submit button the same rounded corners as the text boxes */
+    cursor: pointer; /* Changes the cursor to pointer when over the submit button */
+    display: block; /* Allows the submit button to be centered */
+    margin-left: auto; /* In combination with "margin-right: auto" this will center the submit button */
+    margin-right: auto;
+    font-family: Perpetua, Rockwell Extra Bold;
+}
+
+/* Hover effect for submit button */
+input[type=submit]:hover {
+    background-color: white; /* Turns the background of the submit button white when the user hovers over it */
+    color: black; /* Turns the font black when hovered over */
+    transform: scale(1.5); /* Makes the button increase 1.5 times in size */
+    transition: transform 1.5s; /* Makes the transform effect last 1.5 seconds */
+}
+
+/* Form element */
+form {
+    border-radius: 5px; /* Rounds the corners of the contact form */
+    background-color: #f2f2f2; 
+    padding: 10px; /* Adds padding to the contact form */
+    font-family: "Trebuchet MS", Optima;
+}
 
 .foot {
-    text-align: center;
-    color: rgb(255, 255, 255);
-}
-
-.footBG {
-    background-color: black;
-}
-
-#contColor {
     color: black;
 }
-
-/* SLIDESHOW*/
-
-#Slideshow_Background {
-    background: rgba(255, 255, 255, 0.35); /* This creates a slightly transparent white background that's palced over the video in the background */    
-}
-
-.mySlides{
-    display: none; /* This prevents the images from being displayed, we will use JS to display these */
-}
-
-/* Slideshow section / container */
-#Slideshow_Container {
-    width: 39.5vw; /* Relative sizing of the container for the slidewshow set to 39.5% of the viewport width */
-    height: auto; /* The height of the container is automatically adjusted based on the content it is displaying */
-    padding-top: 4%; /* Adds a small padding to the top of the slideshow container */
-    position: relative; /* This sets the container relative to its normal positioning */
-    margin:auto; /* This will horizontally center the container on the page */
-}
-
-/* Remove the underline from the previous and next buttons on the slideshow */
-#Slideshow_Container a {
-    text-decoration: none;
-}
-
-/* Images contained within the slideshow */
-.Slideshow_Images {
-    vertical-align: middle; /* This centers the images vertically within the slideshow container */
-    height: auto; /* The height of the images is automatically adjusted based on the content, ie if your images are different sizes, they will display as different sizes */
-    box-shadow: 0px 5px 10px 12px rgba(0, 0, 0, .75); /* Adds a shadow around the slideshow images */
-    width: 100%; /* The width of the images is automatically adjusted based on the content */
-}
-
-/* Next and previous buttons */
-.Previous, .Next {
-    cursor: pointer; /* Changes the mouse to a pointer when the buttons are selected */
-    position: absolute; /* This makes the next and previous buttons positioned relative to the slideshow container */
-    top: 50%; /* This moves the buttons up in the slideshow container */
-    width: auto; /* The width of the buttons is automatically adjusted based on the content */
-    padding: 2vw; /* Adds padding equal to 2% of the viewport width */
-    color: darkgray; 
-    font-weight: bold;
-    font-size: 1.5vw;
-    border-radius: 0 3px 3px 0; /* Adds a slightly rounded border on the top and bottom right corners */
-    user-select: none; /* This property makes it so that the user cannot highlight the text */
-    transition: 0.6s ease; /* This specifies the details of the hover transition for these elements */
-}
-
-/* Positioning the next button on the right hand side */
-.Next {
-    right: 0; /* This moves the next button to the right side of the slideshow container */
-    border-radius: 3px 0 0 3px; /* This changes the border radius on the next button to the top and bottom left of the button */
-}
-
-/* Hover effect on slide show buttons */
-.Previous:hover, .Next:hover {
-    background-color: rgba(0, 0, 0, 0.8); /* Makes the background of the arrows a transparent gray color */
-    color: white; /* Makes the arrows white when hovered over */
-}
-
-/* Slideshow text */
-.text {
-    color: white; 
-    padding: 1vw;
-    position: absolute; /* This ensures the text is positioned within the image */
-    bottom: 0; /* This property sets the text at the bottom of the image */
-    width: 100%; /* The element covers the full width of the image */
-    text-align: center; /* The text is center aligned within the image */
-    font-family: Perpetua, Rockwell Extra Bold;
-    letter-spacing: .1vw; /* This gives slight spacing between the letters */
-    font-size: 1.5vw; /* Font size is relative to the size of the viewport width */
-    background-color: rgba(0, 0, 0, 0.75); /* Gives a slightly transparent black background */
-    font-weight: bold;
-    border-radius: 0px 0px 7px 7px; /* Gives the text background rounded corners on the bottom left and right corners */
-}
-
-/* Styling of the dots under the slideshow */
-.dot {
-    cursor: pointer; /* The cursor changes to pointer when hovered over the dots */
-    height: 1vw; /* The dots are sized relative to the viewport width */
-    width: 1vw;
-    margin: .25vw; /* adds additional spacing between the dots */ 
-    background-color: white; /* Makes the dots white */
-    border-radius: 50%; /* Makes the dots circles by rounding each corner */
-    display: inline-block; /* Allows the dots to sit next to eachother rather than on a new line */
-    transition: background-color 0.6s ease; /* When clicked on the dots transition to a different color when clicked or hovered over (the affect is defined below) */
-    z-index: 1; /* This ensures the dots will be displayed above any other elements */
-}
-
-/* Hover effect for slideshow dots */
-.active, .dot:hover {
-    background-color: black; /* Sets the color of the dots when active or hovered over */
-}
-
-/* Fading animation for slideshow */
-.fade {
-    animation-name: fade; /* Fade animation is defined below */
-    animation-duration: 1.5s; /* The animation lasts 1.5 seconds */
-    -webkit-animation-name: fade; /* Same as above for Safari 4.0-8.0 */
-    -webkit-animation-duration: 1.5s;
-}
-
-@-webkit-keyframes fade {
-    from {opacity: .4;} /* Image starts transparent */
-    to {opacity: 1;} /* Image ends opaque */
-}
-
-@keyframes fade {
-    from {opacity: .4;} /* Image starts transparent */
-    to {opacity: 1;} /* Image ends opaque */
-}
+/***** END OF CONTACT FORM STYLING *****/
